syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/marcusaandahl/disys-hw5/proto";

package proto;

service Chat
{
  rpc SendClientTransaction(ClientTransaction) returns (google.protobuf.Empty) {}
  rpc SendMessage(Message) returns (google.protobuf.Empty) {}
  rpc GetBroadcast(google.protobuf.Empty) returns (stream Message) {}
}

message ClientTransaction {
  string clientName = 1;
  bool join = 2;
  int32 senderTime = 3;
}

message Message {
  string clientName = 1;
  string message = 2;
  int32 timestamp = 4;
  int32 senderTime = 5;
}